# test_cowsay

./: Dockerfile  README.md  pyproject.toml
test_cowsay/: main.py
